# sixth

./: .gitignore  pyproject.toml
sixth/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
